top banner added

--- a/File/index.html
+++ b/File/index.html
@@ -5,11 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my-professional-portfolio-website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;1,400&family=Poppins:ital,wght@0,300;0,500;0,600;1,400&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-bannar">
+        <!-- Here is the information -->
+        <div class="info">
+            <h1>WELCOME TO </h1>
+            <h1> <span class="intro">MD HASAN'S</span> WORLD</h1>
+            <h3>Bulid Climber & Train Stoper</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, pariatur expedita! Quia ratione optio
+                vero rem eligendi sequi voluptas quae, porro repellendus excepturi soluta autem hic provident, a id
+                esse?</p>
+
+            <a class="link-btn" target="blank"
+                href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">Hire
+                Me</a>
+        </div>
+        <!-- Here is the Images -->
+        <div class="info">
+            <img src="images/jhankar2.png" alt=" Jhankar Mahbub">
+        </div>
+    </section>
+
 
 </body>
 
