--- a/File/index.html
+++ b/File/index.html
@@ -37,6 +37,27 @@
     </section>
 
 
+
+    <section class="drem-big">
+        <div class="info">
+            <img src="images/jhankar.png" alt="">
+        </div>
+
+        <div class="info">
+            <h1>DREAM BIG</h1>
+            <h3>Become a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo suscipit aut perferendis alias aperiam, enim
+                repudiandae quisquam consectetur fugit natus quibusdam totam vero sapiente nisi tempora fuga vel rerum?
+                Eius!</p>
+
+            <a class="link-btn" target="blank"
+                href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">Dounload
+                Resume</a>
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
