--- a/File/index.html
+++ b/File/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="top-bannar">
+    <section class="top-bannar sideshow ">
         <!-- Here is the information -->
         <div class="info">
             <h1>WELCOME TO </h1>
@@ -36,9 +36,9 @@
         </div>
     </section>
 
+    <!-- Dream Big Section -->
 
-
-    <section class="drem-big">
+    <section class="drem-big sideshow ">
         <div class="info">
             <img src="images/jhankar.png" alt="">
         </div>
@@ -58,6 +58,34 @@
     </section>
 
 
+    <section class="exprience-area">
+        <h1>EXPRIENCES</h1>
+        <div class="sideshow ">
+            <div id="web-dev" class="info exprience-item">
+                <h1>Full Stack Web Developer</h1>
+                <h3><span class="intro">2021 to Present | Pro Level Developer</span> </h3>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta corporis, eligendi, explicabo illum
+                    numquam eveniet cum error facilis veniam iusto praesentium neque, libero itaque saepe reiciendis
+                    voluptate impedit? Iusto placeat cumque quasi consequatur facere quia alias debitis odio officia
+                    perspiciatis?</p>
+            </div>
+
+
+            <div id="web-dev-2" class="info exprience-item">
+                <h1>Baby Web Developer</h1>
+                <h3> <span class="intro">2021 to 2022 | Programming Hero - Learner</span> </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ullam neque ipsum, blanditiis qui
+                    possimus voluptates tenetur est maxime quae. Illo tempore non possimus magnam eligendi minus vel,
+                    consequatur excepturi, dolores sit sint. Quos quod assumenda, consequuntur nostrum tempora
+                    laudantium.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p> &copy; Md Hasan 2021, A programming Hero Initiative.</p>
+    </footer>
 </body>
 
 </html>
